Updating featureset to match simple-keyboard 2.4.0

--- a/src/lib/components/Keyboard.css
+++ b/src/lib/components/Keyboard.css
@@ -64,3 +64,8 @@ body, html {
   display: flex;
   justify-content: center;
 }
+
+.simple-keyboard.hg-theme-default .hg-button.hg-selectedButton {
+  background: rgba(5, 25, 70, 0.53);
+  color: white;
+}
