--- a/src/demo/css/App.css
+++ b/src/demo/css/App.css
@@ -31,7 +31,7 @@
   border-top-right-radius: 0px;
 }
 
-.simple-keyboard.hg-theme-default .hg-button.hg-selectedButton {
+.simple-keyboard .hg-button.hg-selectedButton {
   background: rgba(5, 25, 70, 0.53);
   color: white;
 }
