--- a/src/demo/css/App.css
+++ b/src/demo/css/App.css
@@ -25,6 +25,17 @@
   width: 100%;
   height: 100%;
   font-size: 18px;
+  resize: none;
+}
+
+.demoPage .inputContainer::-webkit-scrollbar {
+  width: 0.4vw;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.demoPage .inputContainer::-webkit-scrollbar-thumb {
+  max-height: 1vh;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .simple-keyboard.hg-layout-custom {
